# rustify-telegram

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/auth/: extract_token.rs  mod.rs
src/config/: app_config.rs
src/data/: env_names.rs  env_validator.rs  mod.rs
src/input_request/: gotify.rs  gotify_message.rs  mod.rs
src/services/: telegram.rs
