[package]
name = "rustify-telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1", default-features = false, features = ["rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
env_logger = "0.11.8"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4.29"
strum = "0.27.2"
strum_macros = "0.27.2"